salesforce/force-app/main/default/objects/Document_Extraction__c/Document_Extraction__c.object-meta.xml
<CustomObject>
    <description>AI extraction results and raw response from document intelligence</description>
    <label>Document Extraction</label>
    <nameField>
        <displayFormat>EXT-{000000}</displayFormat>
        <label>Extraction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Extractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>