salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for human-in-the-loop review</description>
    <label>Below Confidence Threshold</label>
    <type>Checkbox</type>
</CustomField>