salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Compliance_Document__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Document__c</fullName>
    <description>Parent compliance document</description>
    <label>Compliance Document</label>
    <referenceTo>Compliance_Document__c</referenceTo>
    <relationshipName>Document_Extractions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>