salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Extracted_Fields__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Fields__c</fullName>
    <description>Structured JSON containing field → {value, confidence}</description>
    <label>Extracted Fields (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>