salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Extraction_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Extraction_DateTime__c</fullName>
    <description>Used to capture the extraction date/time when it ran</description>
    <label>Extraction DateTime</label>
    <type>DateTime</type>
</CustomField>