salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Name and version of the AI model used for extraction</description>
    <label>AI Model Used</label>
    <length>80</length>
    <type>Text</type>
</CustomField>