salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <description>Used to capture the AI Model Version</description>
    <label>Model Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>