salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Overall_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Overall_Confidence__c</fullName>
    <description>Aggregated confidence score across all extracted fields</description>
    <label>Overall Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>