salesforce/force-app/main/default/objects/Document_Extraction__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <description>Complete raw response from Azure OpenAI / GPT-4o for audit</description>
    <label>Raw AI Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>